修理狸貓星樂園

--- a/css/tanuki-land.css
+++ b/css/tanuki-land.css
@@ -189,11 +189,11 @@ div#loginPrompt div.btn-wrap button.login-btn {
   color: white;
   border: 0.3vw solid purple;
 }
-div#loginPrompt div.btn-wrap button.suprise-btn {
+div#loginPrompt div.btn-wrap button.surprise-btn {
   background-color: white;
   color: purple;
   border: 0.3vw solid white;
 }
-div#loginPrompt div.btn-wrap button.suprise-btn a {
+div#loginPrompt div.btn-wrap button.surprise-btn a {
   font-weight: bold;
 }/*# sourceMappingURL=tanuki-land.css.map */
