--- a/scss/tanuki-land.scss
+++ b/scss/tanuki-land.scss
@@ -238,7 +238,7 @@ div#loginPrompt {
       border: 0.3vw solid purple;
     }
 
-    button.suprise-btn {
+    button.surprise-btn {
       background-color: white;
       color: purple;
       border: 0.3vw solid white;
